# test_task

./: .gitignore  README.md  Readme.md  docker-compose.yml  main.env  requirements.txt
config/: mosquitto.conf
main/: Dockerfile  main.py  pyproject.toml
main/app/: client.py  config.py  databus.py  server.py
src/rest_import_csv/: db.sqlite3  deals.csv  manage.py
src/rest_import_csv/RestImportCsv/: asgi.py  settings.py  urls.py  wsgi.py
src/rest_import_csv/deals/: models.py  serializers.py  urls.py  views.py
src/rest_import_csv/deals/migrations/: 0001_initial.py  0002_uploadfile.py
src/rest_import_csv/templates/: index.html
